# valvestate_sim

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  UI.h  valvestate.jucer
.github/workflows/: main.yml
Docs/: requirements.in  valvestate.ipynb
Images/: CMakeLists.txt  convert.sh  update.sh
JUCE/: CMakeLists.txt
Source/: CMakeLists.txt  Clipping.cpp  Clipping.h  Contour.cpp  Contour.h  FMV.cpp  FMV.h  GainControl.cpp  GainControl.h  InputFilter.cpp  InputFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TableInterpolate.cpp  TableInterpolate.h  UI.h  WaveShape.cpp  WaveShape.h
Source/dsp/: Clipping.h  Contour.cpp  Contour.h  FMV.h  GainControl.h  InputFilter.cpp  InputFilter.h
Source/ui/: PluginEditor.cpp  PluginEditor.h  UI.h  resources.h  ui.h
binder/: clipping_waveshape.asc  clipping_waveshape.txt  gain.info  gain2.info  requirements.in  requirements.txt  valvestate.ipynb  valvestate.py
core/: CMakeLists.txt
core/Source/: Clipping.h  Contour.h  GainControl.cpp  GainControl.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UI.h  ValvestateProcessorBase.h  WaveShape.h
core/dsp/: Clipping.cpp  Valvestate.h  WaveShape.h
docs/: .gitignore  requirements.txt  valvestate.py
faust/: clipping.dsp  contour.dsp  fmv.dsp  gain.dsp  iir3.dsp  table_interpolate.dsp  top.dsp
juce/: CMakeLists.txt
juce/src/: Clipping.cpp  Clipping.h  Contour.cpp  Contour.h  CreatePluginFilter.cpp  FMV.cpp  FMV.h  GainControl.cpp  GainControl.h  InputFilter.cpp  InputFilter.h  Valvestate.cpp  Valvestate.h  WaveShape.cpp
notebooks/: fmv_coefficients.py
pd/: bilinear_transform_3.pd  fmv_tonestack.pd  input.pd  valvestate_contour.pd  valvestate_tonestack.pd  valvestate_top.pd
pd/pd/: clipping.pd  fmv_tonestack.pd  valvestate_gain_control.pd  valvestate_top.pd
plugins/: CMakeLists.txt
plugins/faust/: .gitignore  clipping.dsp  input.dsp
plugins/juce/: CMakeLists.txt
plugins/juce/src/: FMV.cpp  GainControl.cpp
plugins/pd/: CMakeLists.txt
plugins/pd/pd/: CMakeLists.txt  mesa.pd  valvestate_input.pd
plugins/pd/src/: CreatePluginFilter.cpp  Processor.cpp
spice/: fmv.asc
test/: CMakeLists.txt
